--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -24,7 +24,7 @@
 	          <li class="nav-item"><a href="/admin/" class="nav-link">Admin page</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Orders</a></li>
                 <li class="nav-item"><a href="/admin/category" class="nav-link">Drinks Categories</a></li>
-	          <li class="nav-item"><a href="/admin/product/" class="nav-link">All drinks</a></li>
+	          <li class="nav-item"><a href="/admin/drink/" class="nav-link">All drinks</a></li>
 	        </ul>
 	      </div>
 	    </div>
