--- a/public/views/_layouts/include_scripts.ejs
+++ b/public/views/_layouts/include_scripts.ejs
@@ -15,5 +15,5 @@
   <script src="/js/google-map.js"></script>
   <script src="/js/main.js"></script>
 
-<!--from products table-->
+<!--from drinks table-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>-->
