--- a/public/views/_layouts/layout.ejs
+++ b/public/views/_layouts/layout.ejs
@@ -80,10 +80,10 @@
 	          <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
 	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drinks</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="#">Products</a>
-                <a class="dropdown-item" href="#">Single Product</a>
+              	<a class="dropdown-item" href="#">Drinks</a>
+                <a class="dropdown-item" href="#">Single Drinks</a>
                 <a class="dropdown-item" href="#">Cart</a>
                 <a class="dropdown-item" href="#">Checkout</a>
               </div>
@@ -102,7 +102,7 @@
                 <div class="col-md-9 ftco-animate mb-5 text-center">
                     <!--<p class="breadcrumbs mb-0">
                         <span class="mr-2"><a href="/">Home <i class="fa fa-chevron-right"></i></a></span>
-                        <span class="mr-2"><a href="/admin/product/">Product <i class="fa fa-chevron-right"></i></a></span>
+                        <span class="mr-2"><a href="/admin/drink/">Drinks <i class="fa fa-chevron-right"></i></a></span>
                         <span>Edit <i class="fa fa-chevron-right"></i></span>
                     </p>-->
                     <h2 class="mb-0 bread"><%= title %></h2>
