--- a/public/views/drink.ejs
+++ b/public/views/drink.ejs
@@ -13,8 +13,8 @@
                                 <%}%>
                                     <div class="desc">
                                         <p class="meta-prod d-flex">
-                                            <a href="#" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
-                                            <a href="/drink/<%= drink._id %>" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
+                                            <a href="cart/add/<%= drink._id %>" class="d-flex align-items-center justify-content-center"><span class="flaticon-shopping-bag"></span></a>
+                                            <a href="drink/<%= drink._id %>" class="d-flex align-items-center justify-content-center"><span class="flaticon-visibility"></span></a>
                                         </p>
                                     </div>
                                 </div>
