--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -55,7 +55,8 @@
     <%- body%>
 
 
-      <% if (typeof error != 'undefined') { %>
+      <% if (typeof error != 'undefined') {
+        console.log(error)%>
           <script type="text/javascript">
             alert("Error code: <%= error.status %>"+
               "\n"+
