--- a/public/views/admin/drink/new.ejs
+++ b/public/views/admin/drink/new.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 ftco-animate">
-                <form action="" method="POST" enctype="multipart/form-data">
+                <form action="" method="POST" enctype="multipart/form-data" name="drinkForm">
                     <%- include('_drinkForm') %>
                 </form>
             </div> <!-- .col-md-8 -->
