--- a/public/views/_layouts/layout.ejs
+++ b/public/views/_layouts/layout.ejs
@@ -10,66 +10,44 @@
   </head>
   <body>
 
-  	<div class="wrap">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 d-flex align-items-center">
-						<p class="mb-0 phone pl-md-2">
-							<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-							<a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
-						</p>
-					</div>
-					<div class="col-md-6 d-flex justify-content-md-end">
-		        <div class="reg">
-		        	<p class="mb-0">
-                        <a href="/admin/" class="mr-2">Admin Page</a>
-                        <a href="#" class="mr-2">Sign Up</a>
-                        <a href="#">Log In</a>
-                    </p>
-		        </div>
-					</div>
-				</div>
-			</div>
-		</div>
-    
-	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand" href="/">Liquor <span>store</span></a>
-	      <div class="order-lg-last btn-group">
-          <a href="cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
-          	<span class="flaticon-shopping-bag"></span>
-          	<div class="d-flex justify-content-center align-items-center">
-                <small>
-                <% if (typeof cart !== "undefined") {%>
-                    <%= cart.length %>
-                <%} else {%> 0 <%}%>
-                </small></div>
-          </a>
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="/">Liquor <span>store</span></a>
+            <div class="order-lg-last btn-group">
+                <a href="cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
+                    <span class="flaticon-shopping-bag"></span>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <strong id="cartLength">
+                            <% if (typeof cart !== "undefined") {%>
+                                <%= cart.length %>
+                            <%} else {%> 0 <%}%>
+                        </strong>
+                    </div>
+                </a>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drinks</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown04">
+                            <%if(typeof categories !== "undefined"){
+                            categories.forEach(category => { %>
+                                <a class="dropdown-item" href="#"><%= category.name %></a>
+                            <% })} %>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link">Sign up</a></li>
+                    <li class="nav-item"><a href="/admin/" class="nav-link">Admin Page</a></li>
+                </ul>
+            </div>
         </div>
-
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <!--<ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drinks</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="#">Drinks</a>
-                <a class="dropdown-item" href="#">Single Drinks</a>
-                <a class="dropdown-item" href="#">Cart</a>
-                <a class="dropdown-item" href="#">Checkout</a>
-              </div>
-            </li>
-	          <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-	        </ul>-->
-	      </div>
-	    </div>
-	  </nav>
+    </nav>
     <!-- END nav -->
     <section class="hero-wrap hero-wrap-2" style="background-image: url('/images/bg_2.jpg');" data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
@@ -85,6 +63,17 @@
                 </div>
             </div>
         </div>
+
+        <% if (typeof success != 'undefined') { %>
+            <div class="alert alert-success">
+                <strong>Success!</strong> <%= success %>
+            </div>
+        <%}%>
+        <% if (typeof failure != 'undefined') { %>
+            <div class="alert alert-warning">
+                <strong>Failure! </strong> <%= failure %>
+            </div>
+        <%}%>
     </section>
 
     <%- body%>
@@ -97,7 +86,6 @@
         </div>
     </div>
 		<!--FOOTER-->
-
     <footer class="ftco-footer">
       <div class="container">
         <div class="row mb-5">
@@ -123,6 +111,7 @@
               </ul>
             </div>
           </div>
+
           <div class="col-sm-12 col-md">
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Information</h2>
