--- a/public/views/admin/category/category.ejs
+++ b/public/views/admin/category/category.ejs
@@ -23,8 +23,7 @@
                     <tbody>
                     <%if(categories.length !== 0){
                       categories.forEach(category => { %>
-                        }
-                        <tr class="alert" role="alert">
+                        <tr class="alert" role="alert" id="row<%= category._id%>">
                             <td>
 
                             </td>
@@ -35,15 +34,13 @@
                                 </div>
                             </td>
                             <td>
-<!--                                <a href="./<%= category.name %>" class="btn btn-primary">View drinks</a>-->
+<!--                                <a href="./category.name" class="btn btn-primary">View drinks</a>-->
                             </td>
                             <td>
                                 <a href="/admin/category/edit/<%= category.id %>" class="btn btn-info">Edit</a>
                             </td>
                             <td>
-                                <form action="/admin/category/<%= category.id %>?_method=DELETE" method="POST" class="d-flex align-items-center justify-content-center">
-                                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this category?');">Delete</button>
-                                </form>
+                                <button onclick="return doDelete('<%= category._id %>', 'category');" class="btn btn-danger">Delete</button>
                             </td>
                         </tr>
                     <% })} else{%>
@@ -57,3 +54,20 @@
         </div>
     </div>
 </section>
+
+<script>
+  function doDelete(id, object){
+    if(confirm('Are you sure you want to delete this item?')){
+      console.log("id:"+id)
+      $.ajax({
+        url: "/admin/" + object+ "/" + id +"?_method=DELETE",
+        method:"DELETE",
+        data:{},
+        success: function(){
+          $("#row"+id).remove();
+        }
+      });
+    }
+    return false;
+  }
+</script>
