--- a/public/views/admin/drink/_drinkForm.ejs
+++ b/public/views/admin/drink/_drinkForm.ejs
@@ -54,19 +54,19 @@
     <div class="col-md-4">
         <div class="form-group">
             <label for="price">Price €</label>
-            <input required type="number" name="price" id="price" value="<%= drink.price %>" class="form-control" maxlength="6" max="2000">
+            <input required type="number" name="price" id="price" value="<%= drink.price %>" class="form-control" maxlength="6" min="0" step="0.01" max="2000">
         </div>
     </div>
     <div class="col-md-4">
         <div class="form-group">
             <label for="degree">Degree %</label>
-            <input required type="number" name="degree" id="degree" value="<%= drink.degree %>" class="form-control" maxlength="5" max="100">
+            <input required type="number" name="degree" id="degree" value="<%= drink.degree %>" class="form-control" min="0" step="0.1" maxlength="5" max="100">
         </div>
     </div>
     <div class="col-md-4">
         <div class="form-group">
             <label for="degree">Size l</label>
-            <input required  type="number" name="size" id="size" value="<%= drink.size %>" class="form-control" maxlength="5" max="50">
+            <input required  type="number" name="size" id="size" value="<%= drink.size %>" class="form-control" min="0.1" step="0.01" maxlength="5" max="50">
         </div>
     </div>
 
