--- a/public/views/admin/drink/drink.ejs
+++ b/public/views/admin/drink/drink.ejs
@@ -25,7 +25,7 @@
                     </thead>
                     <tbody>
                     <%drinks.forEach(drink => { %>
-                        <tr class="alert" role="alert">
+                        <tr class="alert" role="alert" id="row<%= drink._id %>">
                             <td>
                             <% if(drink.image === null || drink.image === undefined){%>
                                     <img class="img" src="/images/no-image.png" alt="">
@@ -59,9 +59,7 @@
                                 <a href="/admin/drink/edit/<%= drink._id %>" class="btn btn-info">Edit</a>
                             </td>
                             <td>
-                                <form action="/admin/drink/<%= drink._id %>?_method=DELETE" method="POST" class="d-flex align-items-center justify-content-center">
-                                    <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button>
-                                </form>
+                               <button onclick="return doDelete('<%= drink._id %>', 'drink');" class="btn btn-danger">Delete</button>
                             </td>
                         </tr>
                     <% }) %>
@@ -74,3 +72,20 @@
         <h3 class="text-center"> There are no drinks </h3>
     <%}%>
 </section>
+
+<script>
+  function doDelete(id, object){
+    if(confirm('Are you sure you want to delete this item?')){
+      console.log("id:"+id)
+      $.ajax({
+        url: "/admin/" + object+ "/" + id +"?_method=DELETE",
+        method:"DELETE",
+        data:{},
+        success: function(){
+          $("#row"+id).remove();
+        }
+      });
+    }
+    return false;
+  }
+</script>
