products img was added

--- a/public/views/cart.ejs
+++ b/public/views/cart.ejs
@@ -42,7 +42,7 @@
                                 <span class="price"><%= parseFloat(product.price).toFixed(2) %> €</span>
                             </td>
                             <td>
-                                <div>
+                                <div class="justify-content-center">
                                     <a onclick="return doUpdate('<%= product.id %>', 'add');" type="button" class="close" style="float: none; padding: 4px;">
                                         <span aria-hidden="true"><i class="fa fa-plus"></i></span>
                                     </a>
