--- a/public/views/_layouts/layout.ejs
+++ b/public/views/_layouts/layout.ejs
@@ -9,11 +9,14 @@
 
   </head>
   <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <a class="navbar-brand" href="/">Liquor <span>store</span></a>
             <div class="order-lg-last btn-group">
+                <div class="ftco-footer-social list-unstyled mt-2">
+                    <a href="/login"><span class="fa fa-user"> Login</span></a>
+                </div>
+
                 <a href="cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
                     <span class="flaticon-shopping-bag"></span>
                     <div class="d-flex justify-content-center align-items-center">
@@ -25,6 +28,7 @@
                     </div>
                 </a>
             </div>
+
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
@@ -42,7 +46,6 @@
                             <% })} %>
                         </div>
                     </li>
-                    <li class="nav-item"><a href="#" class="nav-link">Sign up</a></li>
                     <li class="nav-item"><a href="/admin/" class="nav-link">Admin Page</a></li>
                 </ul>
             </div>
@@ -105,8 +108,8 @@
               <h2 class="ftco-heading-2">My Accounts</h2>
               <ul class="list-unstyled">
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>My Account</a></li>
-                <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Register</a></li>
-                <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>Log In</a></li>
+                <li><a href="/register"><span class="fa fa-chevron-right mr-2"></span>Register</a></li>
+                <li><a href="/login"><span class="fa fa-chevron-right mr-2"></span>Log In</a></li>
                 <li><a href="#"><span class="fa fa-chevron-right mr-2"></span>My Order</a></li>
               </ul>
             </div>
