--- a/public/views/admin/drink/drink.ejs
+++ b/public/views/admin/drink/drink.ejs
@@ -78,7 +78,7 @@
     if(confirm('Are you sure you want to delete this item?')){
       console.log("id:"+id)
       $.ajax({
-        url: "/admin/" + object+ "/" + id +"?_method=DELETE",
+        url: "/admin/" + object+ "/" + id,
         method:"DELETE",
         data:{},
         success: function(){
