user login was added

--- a/public/views/authorization/login.ejs
+++ b/public/views/authorization/login.ejs
@@ -13,12 +13,12 @@
                         <div class="w-100"></div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="conf_password">Password</label>
+                                <label for="password">Password</label>
                                 <input required type="password" name="password" class="form-control" maxlength="100">
                             </div>
                         </div>
                     </div>
-                    <p class="mb-4 billing-heading">Don't have an account yet? <a href="/register">Create an account!</a></p>
+                    <p class="mb-4 billing-heading">Don't have an account yet? <a href="/user/register">Create an account!</a></p>
                     <div class="row mt-5 pt-3 d-flex">
                         <div class="col-md-6">
                             <a href="../" class="btn btn-secondary">Cancel</a>
