--- a/public/views/authorization/register.ejs
+++ b/public/views/authorization/register.ejs
@@ -39,7 +39,7 @@
                         <div class="w-100"></div>
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="password">Password</label>
+                                <label for="new_password">Password</label>
                                 <input type="password" name="password" class="form-control" maxlength="100">
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <p class="mb-4 billing-heading">Already have an account? <a href="/user/login">Login!</a></p>
                     <div class="row mt-5 pt-3 d-flex">
                         <div class="col-md-6">
                             <a href="../" class="btn btn-secondary">Cancel</a>
