--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -25,6 +25,7 @@
                 <li class="nav-item"><a href="#" class="nav-link">Orders</a></li>
                 <li class="nav-item"><a href="/admin/category" class="nav-link">Drinks Categories</a></li>
 	          <li class="nav-item"><a href="/admin/drink/" class="nav-link">Edit drinks</a></li>
+                <%- include('user_nav') %>
 	        </ul>
 	      </div>
 	    </div>
@@ -40,16 +41,19 @@
             </div>
         </div>
     </section>
-      <% if (typeof success != 'undefined') { %>
-          <div class="alert alert-success">
-              <strong>Success!</strong> <%= success %>
-          </div>
-      <%}%>
-      <% if (typeof failure != 'undefined') { %>
-          <div class="alert alert-warning">
-              <strong>Failure! </strong> <%= failure %>
-          </div>
-      <%}%>
+      <div id="message">
+          <% if (typeof success != 'undefined') { %>
+              <div class="alert alert-success" id="successMessage">
+                  <strong>Success!</strong> <%= success %>
+              </div>
+          <%}%>
+          <% if (typeof failure != 'undefined') { %>
+              <div class="alert alert-warning" id="failureMessage">
+                  <strong>Failure! </strong> <%= failure %>
+              </div>
+          <%}%>
+      </div>
+
 
 
     <%- body%>
