--- a/public/views/_layouts/layout.ejs
+++ b/public/views/_layouts/layout.ejs
@@ -13,9 +13,9 @@
         <div class="container">
             <a class="navbar-brand" href="/">Liquor <span>store</span></a>
             <div class="order-lg-last btn-group">
-                <div class="ftco-footer-social list-unstyled mt-2">
-                    <a href="/login"><span class="fa fa-user"> Login</span></a>
-                </div>
+<!--                <div class="ftco-footer-social list-unstyled mt-2">-->
+<!--                    <a href="/login"><span class="fa fa-user"> Login</span></a>-->
+<!--                </div>-->
 
                 <a href="cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
                     <span class="flaticon-shopping-bag"></span>
@@ -46,7 +46,10 @@
                             <% })} %>
                         </div>
                     </li>
-                    <li class="nav-item"><a href="/admin/" class="nav-link">Admin Page</a></li>
+                    <% if (user && user.is_admin){ %>
+                        <li class="nav-item"><a href="/admin/" class="nav-link">Admin Page</a></li>
+                    <% }%>
+                    <%- include('user_nav') %>
                 </ul>
             </div>
         </div>
