express-message was added to display success/warning/danger messages

--- a/public/views/authorization/register.ejs
+++ b/public/views/authorization/register.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 ftco-animate">
-                <form action="" method="POST" enctype="multipart/form-data" name="drinkForm">
+                <form action="" method="POST" enctype="multipart/form-data" name="registrationForm">
                     <div class="row align-items-end">
                         <div class="col-md-6">
                             <div class="form-group">
