--- a/public/views/_layouts/admin_layout.ejs
+++ b/public/views/_layouts/admin_layout.ejs
@@ -41,6 +41,9 @@
             </div>
         </div>
     </section>
+
+      <%- include('message_template') %>
+
       <div id="message">
           <% if (typeof success != 'undefined') { %>
               <div class="alert alert-success" id="successMessage">
