--- a/public/views/_layouts/layout.ejs
+++ b/public/views/_layouts/layout.ejs
@@ -17,7 +17,7 @@
 <!--                    <a href="/login"><span class="fa fa-user"> Login</span></a>-->
 <!--                </div>-->
 
-                <a href="cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
+                <a href="/cart/" class="btn-cart dropdown-toggle dropdown-toggle-split" aria-haspopup="true" aria-expanded="false">
                     <span class="flaticon-shopping-bag"></span>
                     <div class="d-flex justify-content-center align-items-center">
                         <strong id="cartLength">
@@ -38,7 +38,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drinks</a>
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Drinks</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
                             <%if(typeof categories !== "undefined"){
                             categories.forEach(category => { %>
@@ -69,17 +69,8 @@
                 </div>
             </div>
         </div>
+        <%- include('message_template') %>
 
-        <% if (typeof success != 'undefined') { %>
-            <div class="alert alert-success">
-                <strong>Success!</strong> <%= success %>
-            </div>
-        <%}%>
-        <% if (typeof failure != 'undefined') { %>
-            <div class="alert alert-warning">
-                <strong>Failure! </strong> <%= failure %>
-            </div>
-        <%}%>
     </section>
 
     <%- body%>
