--- a/public/views/_layouts/user_nav.ejs
+++ b/public/views/_layouts/user_nav.ejs
@@ -1,14 +1,14 @@
 <% if (user){ %>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"><%= user.name %></span></a>
+        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"><%= user.name %></span></a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
-            <a class="dropdown-item" href="/user">User Account</a>
+            <a class="dropdown-item" href="/user">My Profile</a>
             <a class="dropdown-item" href="/user/logout">Logout</a>
         </div>
     </li>
 <% }else { %>
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"> Login</span></a>
+        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"> Login</span></a>
         <div class="dropdown-menu" aria-labelledby="dropdown04">
             <a class="dropdown-item" href="/user/login">Login</a>
             <a class="dropdown-item" href="/user/register">Register</a>
