some changes (could be some mistakes)

--- a/public/views/admin/category/_categoryForm.ejs
+++ b/public/views/admin/category/_categoryForm.ejs
@@ -1,6 +1,6 @@
 <div class="form-group">
     <label for="name">Name</label>
-    <input required value="<%= category.name %>" type="text" name="name" id="name" class="form-control">
+    <input value="<%= category.name %>" type="text" name="name" id="name" class="form-control">
 </div>
 <div class="col-md-4">
     <a href="../" class="btn btn-secondary">Cancel</a>
