--- a/public/views/admin/drink/drink.ejs
+++ b/public/views/admin/drink/drink.ejs
@@ -75,6 +75,7 @@
 
 <script>
   function doDelete(id, object){
+    $("#message").fadeOut(100);
     if(confirm('Are you sure you want to delete this item?')){
       console.log("id:"+id)
       $.ajax({
