--- a/public/views/authorization/register.ejs
+++ b/public/views/authorization/register.ejs
@@ -40,7 +40,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="new_password">Password</label>
-                                <input type="password" name="password" class="form-control" maxlength="100">
+                                <input type="password" name="new_password" class="form-control" maxlength="100">
                             </div>
                         </div>
                         <div class="col-md-12">
