create order was started

--- a/public/views/cart.ejs
+++ b/public/views/cart.ejs
@@ -77,7 +77,7 @@
                         <span id="total"><%= parseFloat(total).toFixed(2) %>  €</span>
                     </p>
                 </div>
-                <p class="text-center"><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+                <p class="text-center"><a href="/order" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
             </div>
         </div>
     </div>
